API to get available computation methods
* adds endpoint to fetch available computation methods
* web-client fills add computer player menu dynamically
* aligned player API object and add player request object
    * both now have properties isComputerPlayer and computationMethod
